LDEV-3962 Make tool's authoring html occupy all available space (this way avoiding white space at the bottom)

--- a/lams_central/web/css/authoring.css
+++ b/lams_central/web/css/authoring.css
@@ -35,7 +35,7 @@ a.ygtvspacer {
 
 .dialogContainer .modal-body {
 	height : 100%;
-	max-height: calc(100% - 56px);
+	max-height: calc(100% - 38px);
 	padding: 0;
 }
 
